# Scrapy-site-Rozetka

./: LICENSE  README.md  data_with_rozetka.csv  pyproject.toml  scraping_script.py
